query-compiler/query-compiler/tests/snapshots/queries__queries@nested-pagination-query.json.snap
---
source: query-compiler/query-compiler/tests/queries.rs
expression: pretty
input_file: query-compiler/query-compiler/tests/data/nested-pagination-query.json
snapshot_kind: text
---
rawNestedRead (query «SELECT "public"."User"."id" FROM "public"."User" WHERE 1=1
                      OFFSET $1»
               params [const(BigInt(0))]
               fields {
                   id: 0
               }
               relations [posts on left.0 = right.2 many (query «SELECT
                                                                 "public"."Post"."id",
                                                                 "public"."Post"."title",
                                                                 "public"."Post"."userId"
                                                                 FROM
                                                                 "public"."Post"
                                                                 WHERE
                                                                 "public"."Post"."userId"
                                                                 IN [$1,*] ORDER
                                                                 BY
                                                                 "public"."Post"."id"
                                                                 ASC OFFSET $2»
                                                          params [var(@parent$id as Int),
                                                                  const(BigInt(0))]
                                                          fields {
                                                              id: 0
                                                              title: 1
                                                          })])
