query-compiler/query-compiler/tests/snapshots/queries__queries@order-by-to-many-1m-field.json.snap
---
source: query-compiler/query-compiler/tests/queries.rs
expression: pretty
input_file: query-compiler/query-compiler/tests/data/order-by-to-many-1m-field.json
---
dataMap {
    id: Int (id)
    email: String (email)
    role: Enum<Role> (role)
}
enums {
    Role: {
        admin: ADMIN
        user: USER
    }
}
query «SELECT "t0"."id", "t0"."email", "t0"."role"::text FROM "public"."User" AS
       "t0" ORDER BY (SELECT "orderby_1"."title" FROM "public"."Post" AS
       "orderby_1" WHERE ("t0"."id" = "orderby_1"."userId") ORDER BY
       "orderby_1"."title" ASC LIMIT $1) ASC»
params [const(BigInt(1))]
